<resources>
    <string name="app_name">News</string>

    <!--Drawer-->
    <string name="news">News</string>
    <string name="simpleSource">Source</string>
    <string name="weather">Weather</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="article">Article</string>
    <string name="exit">Exit</string>

    <string name="navigation_drawer_open">@string/app_name</string>
    <string name="navigation_drawer_close">@string/app_name</string>

    <!--Countries-->
    <string name="ukraine">Украина</string>
    <string name="poland">Польша</string>
    <string name="germany">Германия</string>

    <!--Cities-->
    <string name="kiev">Киев</string>
    <string name="kharkov">Харьков</string>
    <string name="dnepr">Днепр</string>
    <string name="lviv">Львов</string>

    <string name="varshava">Варшава</string>
    <string name="krakov">Харьков</string>
    <string name="lodz">Лодзь</string>
    <string name="poznan">Познань</string>

    <string name="berlin">Берлин</string>
    <string name="munhen">Мюнхен</string>
    <string name="keln">Кельн</string>
    <string name="gamburg">Гамбург</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!--Login Activity-->
    <string name="progress_login_text">Authenticating...</string>
    <string name="progress_sign_up_text">Processing...</string>
    <string name="saving">Saving...</string>
    <string name="loading">Loading...</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="re_password">Re-Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in_with_github">Sign in with GitHub</string>
    <string name="field_required">Field is required</string>


    <string name="edit_profile">Edit Profile</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="choose_date">Choose date</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="b_day">B-Day</string>


    <string name="pick_image">Pick Image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_photo">Take Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
