<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.news.fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/iv_person_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_load"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/list_item_margin"
            android:paddingRight="@dimen/list_item_margin">

            <!-- First Name Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/first_name" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="Vlad" />

            <!-- Last Name Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/last_name" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="Bakalo" />

            <!-- Phone Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/phone" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="03204" />

            <!--Country Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/country" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="Country" />

            <!--City Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/city" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="City" />

            <!--B-Day Label -->
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin_top"
                android:layout_marginBottom="@dimen/label_margin_bottom"
                android:text="@string/b_day" />

            <TextView
                style="@style/StaticText"
                android:id="@+id/tv_profile_birth_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_margin"
                android:clickable="true"
                android:hint="04/02/1998" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>